# zuora-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
src/client/: api_client.rs  auth.rs  error.rs  mod.rs
src/commands/: accounting_codes.rs  accounting_periods.rs  accounts.rs  adjustments.rs  attachments.rs  bill_runs.rs  billing_documents.rs  billing_preview.rs  catalog.rs  catalog_groups.rs  commitments.rs  config_cmd.rs  contacts.rs  credit_memos.rs  custom_exchange_rates.rs  debit_memos.rs  describe.rs  files.rs  fulfillments.rs  invoice_schedules.rs  invoices.rs  journal_entries.rs  journal_runs.rs  login.rs  mcp.rs  mod.rs  notifications.rs  operations.rs  order_line_items.rs  orders.rs  payment_methods.rs  payment_runs.rs  payment_schedules.rs  payments.rs  query.rs  ramps.rs  refunds.rs  sequence_sets.rs  sign_up.rs  status.rs  (+6 more)
src/config/: mod.rs  profile.rs  store.rs
src/output/: formatter.rs  mod.rs
src/types/: responses.rs
tests/: cli_parsing.rs  integration.rs  new_resources.rs  workflows_and_mcp.rs
