[package]
name = "zuora"
version = "0.1.1"
edition = "2021"
description = "A CLI for the Zuora Billing API"
license = "MIT"
repository = "https://github.com/shrav/zuora-cli"
homepage = "https://github.com/shrav/zuora-cli"
readme = "README.md"
keywords = ["zuora", "billing", "cli", "api", "saas"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
comfy-table = "7"
colored = "3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rpassword = "7"
clap_complete = "4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"

[profile.release]
lto = "thin"
strip = true
